# pyflagoras

./: MANIFEST.in  README.md  addingflags.md  examples.md  pyproject.toml
dev/: flag_list.txt  search.py
src/pyflagoras/: __init__.py  __main__.py  flag_aliases.json  flag_info.py  image_processor.py  pyflagoras.py  similarity_algorithms.py  utils.py
src/pyflagoras/data/: colour_aliases.json
src/pyflagoras/flags/: agender_2014.json  aroace_2018.json  aromantic_2014.json  asexual_2010.json  bear_1995.json  bigender_2014.json  bisexual_1998.json  gay_men_2019.json  genderfluid_2012.json  genderqueer_2011.json  intersexInclusive_2021.json  intersex_2013.json  labrysLesbian_1999.json  lesbian_2010.json  lesbian_2018.json  lesbian_2019.json  lipstick_lesbian_2010.json  nonbinary_2014.json  omnisexual_2015.json  pangender_2015.json  pansexual_2010.json  philadelphiaPride_2017.json  pinkUnionJack_2009.json  polysexual_2012.json  pride_1978_eightStripes.json  pride_1978_sevenStripes.json  pride_1979.json  progressPride_2018.json  sapphic_2015.json  southAfricaPride_2010.json  transgender_1999.json  twink_2009.json
