[build-system]
requires = [
"setuptools>=61.0"
]

build-backend = "setuptools.build_meta"
[project.scripts]
pyflagoras = "pyflagoras:__main__.main"
[project]
name = "pyflagoras"
version = "0.1.0"
dependencies = [
"requests>=2.31.0",
"pillow>=10.3.0"
]
authors = [
  { name="Annabel Quach", email="annabelquach13@gmail.com" },
]
description = "Generate pride flags from images"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha"
]

[project.urls]
"Homepage" = "https://github.com/phthallo/pyflagoras"
"Bug Tracker" = "https://github.com/phthallo/pyflagoras/issues"